# iroh-gossip-rendezvous

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  PROTOCOL.md  README.md  SECURITY.md  deny.toml  justfile
.cargo/: mutants.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  nightly.yml
benches/: crypto.rs  keys.rs  merge.rs  wire.rs
examples/: quickstart.rs  simulator.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_crypto_open.rs  fuzz_decode_entries.rs  fuzz_merge.rs  fuzz_wire_roundtrip.rs
src/: builder.rs  crypto.rs  error.rs  gossip_glue.rs  kani_proofs.rs  keys.rs  lib.rs  merge.rs  protocol.rs  rendezvous.rs  sim_impl.rs  state.rs  wire.rs
src/dht/: mainline.rs  memory.rs  mod.rs
tests/: public_api.rs  spec_drift.rs  stateright_model.rs  two_node_bootstrap.rs
